// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography Component matches snapshot with custom props 1`] = `
<DocumentFragment>
  <h1
    class="text-white font-normal text-5xl custom-class"
  >
    Hello World
  </h1>
</DocumentFragment>
`;

exports[`Typography Component matches snapshot with default props 1`] = `
<DocumentFragment>
  <p
    class="text-black font-normal text-base"
  >
    Hello World
  </p>
</DocumentFragment>
`;
